# jinkyumock

./: .gitignore  README.md  package.json  server.js
agent-console/: .env.example  .gitignore  README.md
agent-console/backend/: pyproject.toml
agent-console/backend/app/: __init__.py  main.py  models.py  runner.py
agent-console/backend/tests/: test_runner.py
agent-console/frontend/: index.html  package-lock.json  package.json  vite.config.js
agent-console/frontend/src/: App.jsx  config.js  main.jsx  responsive.css  styles.css
agent-console/frontend/src/components/: BrowserPanel.jsx  Controls.jsx  ConversationPanel.jsx  SettingsDrawer.jsx  Timeline.jsx
docs/: agent-challenges.md
public/: app.js  index.html  styles.css
test/: server.test.js
