[project]
name = "agent-console-api"
version = "0.1.0"
description = "Generic Browser Use execution API with live event streaming."
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "python-dotenv>=1.1,<2",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
]
live = [
  "browser-use[core]>=0.13.1,<0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
